tests/NormalTests/paczka1/fuzzy1/84897384.err
Error in line 5: 9IvwCXr4 A555 38,0
Error in line 13: tIR7YX A555 15,7
Error in line 18: S911 A555 22,0
Error in line 32: 9IvwCXr4 S911 -2,1
Error in line 34: dI0 A555 85,9
